--- a/static/index.html
+++ b/static/index.html
@@ -21,7 +21,7 @@
 		<!-- p means paragraph -->
 		<div>
 			<h1>Samuel Blake</h1>
-			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+			<p>mathematics &middot; computer science &middot; cognitive science</p>
 		</div>
 
 
@@ -30,10 +30,16 @@
 		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
 		<div class="project" id="project1">
-			<a href="project.html">
-				<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image">
-				<p>Waiting in Line</p>
+			<a href="http://tea-ucsd.herokuapp.com/login">
+				<img src="images/TEA.png" alt="TEA Web-App image">
+				<p>TEA, a Project Workflow Application</p>
 			</a>
+			<p>Tired of the stresses of starting and completing a group project?
+				Need help finding a group project to join? Or you want to display your project for others to join?
+				Look no further! Check out TEA, a Project Workflow Application. Not only can you join and create projects, TEA
+				will also help you complete your project! Equipped with Milestones, Announcements, a Calendar, and more, your project
+				dashboard will motivate you and make it easy to track your project's progress!
+			</p>
 		</div>
 		<div class="project" id="project2">
 			<a href="project.html">
